--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:required="false" />
 
     <application
-        android:name=".Keep"
+        android:name=".Application.Keep"
         android:allowBackup="true"
         android:icon="@drawable/ic_book"
         android:label="@string/app_name"
@@ -29,7 +29,7 @@
         <activity android:name=".Authentication.SignUp"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:windowSoftInputMode="adjustPan|adjustResize|stateHidden"
             android:screenOrientation="portrait">
             <intent-filter>
